fix subcat layout jump

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -949,7 +949,7 @@ hr {
   font-size: $fs-xs;
   padding: $space-2 $space-3;
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   text-align: center;
   white-space: nowrap;
   width: auto;
